--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>A second short paragraph about yourself or some placeholder text.</p>
 
   <ul>
-    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+    <li><strong>Email:</strong> <a href="#">yonasaye@gmail.com</a></li>
     <li><strong>Github:</strong> <a href="#">sampleName</a></li>
     <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
   </ul>
